Rename Streaming Integrator to Streaming Integrator Tooling

--- a/modules/distribution/src/policies/pages/privacy-policy.hbs
+++ b/modules/distribution/src/policies/pages/privacy-policy.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width'>
-    <title>Privacy Policy | WSO2 Streaming Integrator</title>
+    <title>Privacy Policy | WSO2 Streaming Integrator Tooling</title>
     <link rel="stylesheet" type="text/css"
           href="{{@contextPath}}/public/app/js/libs/font-wso2_1.0.0/css/font-wso2.min.css" />
     <link rel="stylesheet" type="text/css" href="{{@contextPath}}/public/app/css/styles.css" />
@@ -15,7 +15,7 @@
     <header>
         <a href="{{@contextPath}}/" style="text-decoration: none; color: #fff;">
             <img src="{{@contextPath}}/public/app/images/wso2-logo.svg" height="17" />
-            <h1>WSO2 Streaming Integrator</h1>
+            <h1>WSO2 Streaming Integrator Tooling</h1>
         </a>
     </header>
 
@@ -31,8 +31,8 @@
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">WSO2
-                                                                         Stream Processor (referred to as “WSO2 SP
-                                                                         4.2.0” within this
+                                                                         Streaming Integrator Tooling (referred to as “WSO2 SI
+                                                                         1.0.0” within this
                                                                          policy) is an open source stream processing
                                                                          application that is based
                                                                          on open standards and
