--- a/modules/distribution/src/policies/pages/index.hbs
+++ b/modules/distribution/src/policies/pages/index.hbs
@@ -21,7 +21,7 @@
 <head>
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width'>
-    <title>WSO2 Streaming Integrator</title>
+    <title>WSO2 Streaming Integrator Tooling</title>
     <link rel="stylesheet" type="text/css"
           href="{{@contextPath}}/public/app/js/libs/font-wso2_1.0.0/css/font-wso2.min.css" />
     <link rel="stylesheet" type="text/css" href="{{@contextPath}}/public/app/css/styles.css" />
@@ -33,7 +33,7 @@
     <header>
         <a href="{{@contextPath}}/" style="text-decoration: none; color: #fff;">
             <img src="{{@contextPath}}/public/app/images/wso2-logo.svg" height="17" />
-            <h1>WSO2 Streaming Integrator</h1>
+            <h1>WSO2 Streaming Integrator Tooling</h1>
         </a>
     </header>
 
