--- a/modules/distribution/src/policies/pages/privacy-policy.hbs
+++ b/modules/distribution/src/policies/pages/privacy-policy.hbs
@@ -26,8 +26,8 @@
             <font color="#1155cc"><font size="3" style="font-size: 13pt"><u><b><a href="https://wso2.com/analytics">About</a><a
                     href="https://wso2.com/analytics">
             </a><a href="https://wso2.com/analytics">WSO</a><a href="https://wso2.com/analytics">2
-            </a><a href="https://wso2.com/analytics">Stream</a><a href="https://wso2.com/analytics">
-            </a><a href="https://wso2.com/analytics">Processor</a></b></u></font></font></h4>
+            </a><a href="https://wso2.com/analytics">Streaming</a><a href="https://wso2.com/analytics">
+            </a><a href="https://wso2.com/analytics">Integrator Tooling</a></b></u></font></font></h4>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">WSO2
