Update cookie policy and privacy policy wih correct product name

--- a/modules/distribution/src/policies/pages/cookie-policy.hbs
+++ b/modules/distribution/src/policies/pages/cookie-policy.hbs
@@ -34,7 +34,7 @@
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">WSO2
-                                                                         Streaming Integrator Tooling (referred to as “WSO2 SP
+                                                                         Streaming Integrator Tooling (referred to as “WSO2 SI
                                                                          ” within this
                                                                          policy) is an open source stream processing
                                                                          application that is based
@@ -47,7 +47,7 @@
                                                                             Policy</b></font></font></h2>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
                                                                           uses cookies so that it can provide the
                                                                          best user experience
                                                                          for you and identify you for security purposes.
@@ -58,12 +58,12 @@
             style="margin-top: 0.21in; margin-bottom: 0.11in; border: none; padding: 0in; line-height: 110%; orphans: 0; widows: 0">
             <a name="h.2cmh0sute7p7"></a>
             <font color="#333333"><font size="6" style="font-size: 22pt">How does
-                                                                         WSO2 SP 4.2.0 process cookies?</font></font>
+                                                                         WSO2 SI 1.0.0 process cookies?</font></font>
         </h2>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                         4.2.0 stores and retrieves information on your
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                         1.0.0 stores and retrieves information on your
                                                                          browser using cookies.
                                                                          Some cookies allow a user to log in to the
                                                                          system and maintain
@@ -81,9 +81,9 @@
                 size="2" style="font-size: 10pt"><u><a
                 href="{{@contextPath}}/privacy-policy">WSO</a><a
                 href="{{@contextPath}}/privacy-policy">2
-        </a><a href="{{@contextPath}}/privacy-policy">SP</a><a
+        </a><a href="{{@contextPath}}/privacy-policy">SI</a><a
                 href="{{@contextPath}}/privacy-policy">
-            4.2.0 </a><a href="{{@contextPath}}/privacy-policy">Privacy</a><a
+            1.0.0 </a><a href="{{@contextPath}}/privacy-policy">Privacy</a><a
                 href="{{@contextPath}}/privacy-policy">
         </a><a href="{{@contextPath}}/privacy-policy">Policy</a><a
                 href="{{@contextPath}}/privacy-policy">.</a></u></font></font></p>
@@ -109,13 +109,13 @@
             style="margin-top: 0.21in; margin-bottom: 0.11in; border: none; padding: 0in; line-height: 110%; orphans: 0; widows: 0">
             <a name="h.zhks2mdz1gs3"></a>
             <font color="#333333"><font size="6" style="font-size: 22pt">What
-                                                                         does WSO2 SP 4.2.0 use cookies
+                                                                         does WSO2 SI 1.0.0 use cookies
                                                                          for?</font></font></h2>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">Cookies
-                                                                         are used in two main ways in WSO2 SP
-                                                                         4.2.0.</font></font></p>
+                                                                         are used in two main ways in WSO2 SI
+                                                                         1.0.0.</font></font></p>
         <ol>
             <li />
             <p class="western" align="left"
@@ -132,8 +132,8 @@
         </ol>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                         4.2.0 uses cookies for the following purposes
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                         1.0.0 uses cookies for the following purposes
                                                                          listed below:</font></font></p>
         <h3 class="western" align="left"
             style="margin-top: 0.21in; margin-bottom: 0.11in; border: none; padding: 0in; line-height: 110%; orphans: 0; widows: 0">
@@ -141,8 +141,8 @@
             <font color="#333333"><font size="5" style="font-size: 18pt">Preferences</font></font></h3>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                         4.2.0 uses these cookies to remember your
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                         1.0.0 uses these cookies to remember your
                                                                          settings and preferences,
                                                                          and to auto-fill the form fields to make your
                                                                          interactions with the
@@ -160,10 +160,10 @@
             <li />
             <p class="western" align="left"
                style="margin-bottom: 0in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-                <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                             4.2.0 uses selected cookies to identify and
+                <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                             1.0.0 uses selected cookies to identify and
                                                                              prevent security risks.
-                                                                             For example, WSO2 SP 4.2.0 may use these
+                                                                             For example, WSO2 SI 1.0.0 may use these
                                                                              cookies to store your
                                                                              session information in order to prevent
                                                                              others from changing your
@@ -175,8 +175,8 @@
             <li />
             <p class="western" align="left"
                style="margin-bottom: 0in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-                <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                             4.2.0 uses session cookies to maintain your
+                <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                             1.0.0 uses session cookies to maintain your
                                                                              active session.</font></font><br />
                 <br />
 
@@ -188,8 +188,8 @@
             <font color="#333333"><font size="5" style="font-size: 18pt">Performance</font></font></h3>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                         4.2.0 may use cookies to allow “Remember Me”
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                         1.0.0 may use cookies to allow “Remember Me”
                                                                          functionalities.</font></font></p>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; font-weight: normal; line-height: 115%; orphans: 2; widows: 2">
@@ -205,9 +205,9 @@
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">Using
-                                                                         WSO2 SP 4.2.0 may cause some third-party
+                                                                         WSO2 SI 1.0.0 may cause some third-party
                                                                          cookies to be set in your
-                                                                         browser. WSO2 SP 4.2.0 has no control over how
+                                                                         browser. WSO2 SI 1.0.0 has no control over how
                                                                          any of them operate.
                                                                          WSO2 strongly advises you to refer the
                                                                          respective cookie policy of
@@ -218,22 +218,22 @@
             style="margin-top: 0.21in; margin-bottom: 0.11in; border: none; padding: 0in; line-height: 110%; orphans: 0; widows: 0">
             <a name="h.xqlxw7fo089z"></a>
             <font color="#333333"><font size="6" style="font-size: 22pt">What
-                                                                         type of cookies does WSO2 SP 4.2.0 use?</font></font>
+                                                                         type of cookies does WSO2 SI 1.0.0 use?</font></font>
         </h2>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SP
-                                                                         4.2.0 uses persistent cookies and session
+            <font color="#333333"><font size="2" style="font-size: 10pt">WSO2 SI
+                                                                         1.0.0 uses persistent cookies and session
                                                                          cookies. A persistent
-                                                                         cookie helps WSO2 SP 4.2.0 to recognize you as
+                                                                         cookie helps WSO2 SI 1.0.0 to recognize you as
                                                                          an existing user so
                                                                          that it is easier to return to WSO2 or interact
-                                                                         with WSO2 SP 4.2.0
+                                                                         with WSO2 SI 1.0.0
                                                                          without signing in again. After you sign in, a
                                                                          persistent cookie
                                                                          stays in your browser and will be read by WSO2
-                                                                         SP 4.2.0 when you
-                                                                         return to WSO2 SP 4.2.0.</font></font></p>
+                                                                         SI 1.0.0 when you
+                                                                         return to WSO2 SI 1.0.0.</font></font></p>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">A
@@ -252,7 +252,7 @@
                                                                          the cookies used?</font></font></h2>
         <p class="western" align="left"
            style="margin-bottom: 0in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
-            The following are the main types of cookies used by WSO2 SP 4.2.0</p>
+            The following are the main types of cookies used by WSO2 SI 1.0.0</p>
         <p class="western" align="left"
            style="margin-bottom: 0in; border: none; padding: 0in; font-weight: normal; line-height: 115%; orphans: 2; widows: 2">
             <br />
@@ -523,7 +523,7 @@ cookies are used:</span></font></p>
                                                                          likely, disabling cookies will make you unable
                                                                          to use authentication
                                                                          and authorization functionalities offered by
-                                                                         WSO2 SP 4.2.0.</font></font></p>
+                                                                         WSO2 SI 1.0.0.</font></font></p>
         <p class="western" align="left"
            style="margin-bottom: 0.11in; border: none; padding: 0in; line-height: 115%; orphans: 2; widows: 2">
             <font color="#333333"><font size="2" style="font-size: 10pt">If you
@@ -531,7 +531,7 @@ cookies are used:</span></font></p>
                                                                          use of cookies, please
                                                                          contact the entity or individuals (or their
                                                                          data protection officer,
-                                                                         if applicable) running this WSO2 SP 4.2.0
+                                                                         if applicable) running this WSO2 SI 1.0.0
                                                                          instance.</font></font></p>
         <h2 class="western" align="left"
             style="margin-top: 0.21in; margin-bottom: 0.11in; border: none; padding: 0in; line-height: 110%; orphans: 0; widows: 0">
@@ -542,11 +542,11 @@ cookies are used:</span></font></p>
             <font color="#333333"><font size="2" style="font-size: 10pt">This
                                                                          cookie policy is only for illustrative purposes
                                                                          of the product WSO2
-                                                                         SP 4.2.0. The content in the policy is
+                                                                         SI 1.0.0. The content in the policy is
                                                                          technically correct at the
                                                                          time of the product shipment. The organization
                                                                          which runs this WSO2
-                                                                         SP 4.2.0 instance has full authority and
+                                                                         SI 1.0.0 instance has full authority and
                                                                          responsibility with regard
                                                                          to the effective Cookie Policy. WSO2, its
                                                                          employees, partners, and
@@ -554,10 +554,10 @@ cookies are used:</span></font></p>
                                                                          require, store, process
                                                                          or control any of the data, including personal
                                                                          data contained in WSO2
-                                                                         ISP 4.2.0. All data, including personal data is
+                                                                         ISI 1.0.0. All data, including personal data is
                                                                          controlled and
                                                                          processed by the entity or individual running
-                                                                         WSO2 SP 4.2.0. WSO2,
+                                                                         WSO2 SI 1.0.0. WSO2,
                                                                          its employees partners and affiliates are not a
                                                                          data processor or a
                                                                          data controller within the meaning of any data
@@ -566,7 +566,7 @@ cookies are used:</span></font></p>
                                                                          undertake any responsibility
                                                                          or liability in connection with the lawfulness
                                                                          or the manner and
-                                                                         purposes for which WSO2 SP 4.2.0 is used by
+                                                                         purposes for which WSO2 SI 1.0.0 is used by
                                                                          such entities or persons.
             </font></font>
         </p>
